--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "vue": "^3.5.17"
   },
   "devDependencies": {
