feat: add get forecast api and call in the front

--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,11 @@
   "keywords": [],
   "author": "Tong Xue",
   "license": "ISC",
-  "description": "",
+  "description": "A Node API for weather app with Express and SQLite",
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "sqlite3": "^5.1.7"
   },
